dropshot/tests/fail/bad_trait_endpoint7.stderr
error[E0277]: the trait bound `Ret: dropshot::handler::HttpResponseContent` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:41:27
   |
41 |         Ok(HttpResponseOk(Ret { x: "Oxide".to_string(), y: 0x1de }))
   |            -------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `Ret`, which is required by `Ret: dropshot::handler::HttpResponseContent`
   |            |
   |            required by a bound introduced by this call
   |
   = help: the following other types implement trait `serde::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `dropshot::HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `dropshot::HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:41:9
   |
41 |         Ok(HttpResponseOk(Ret { x: "Oxide".to_string(), y: 0x1de }))
   |         ^^ the trait `serde::ser::Serialize` is not implemented for `Ret`, which is required by `Ret: dropshot::handler::HttpResponseContent`
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Ret` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `dropshot::HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:41:9
   |
41 |         Ok(HttpResponseOk(Ret { x: "Oxide".to_string(), y: 0x1de }))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `Ret`, which is required by `Ret: dropshot::handler::HttpResponseContent`
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Ret` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `dropshot::HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:38:5
   |
38 | /     async fn bad_endpoint(
39 | |         _rqctx: RequestContext<()>,
40 | |     ) -> Result<HttpResponseOk<Ret>, HttpError> {
   | |_______________________________________________^ the trait `serde::ser::Serialize` is not implemented for `Ret`, which is required by `Ret: dropshot::handler::HttpResponseContent`
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Ret` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `dropshot::HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: dropshot::handler::HttpResponseContent` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:28:10
   |
28 |     ) -> Result<HttpResponseOk<Ret>, HttpError>;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `Ret`, which is required by `Ret: dropshot::handler::HttpResponseContent`
   |
   = help: the following other types implement trait `serde::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `dropshot::HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpResponseOk`

error[E0277]: endpoint handler functions must return a value that implements `dropshot::HttpResponse`
  --> tests/fail/bad_trait_endpoint7.rs:28:10
   |
28 |     ) -> Result<HttpResponseOk<Ret>, HttpError>;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `HttpResponse` is not implemented for `Result<dropshot::HttpResponseOk<Ret>, dropshot::HttpError>`
   |
   = note: `HttpResponse` is implemented for `Result<T, E>` where `T: HttpResponse` and `E: HttpResponseError`
   = note: `HttpResponse` is implemented for `http::Response<dropshot::Body>`
   = help: the trait `HttpResponse` is implemented for `Result<T, E>`
note: required by a bound in `ApiEndpoint::<StubContext>::new_for_types`
  --> src/api_description.rs
   |
   |     pub fn new_for_types<FuncParams, ReturnType>(
   |            ------------- required by a bound in this associated function
...
   |         ReturnType: HttpResponse + Send + Sync + 'static,
   |                     ^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<StubContext>::new_for_types`

error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:28:10
   |
28 |     ) -> Result<HttpResponseOk<Ret>, HttpError>;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `Ret`, which is required by `Ret: dropshot::handler::HttpResponseContent`
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Ret` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `dropshot::HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `fn(RequestContext<<ServerImpl as MyApi>::Context>) -> impl Future<Output = Result<dropshot::HttpResponseOk<Ret>, dropshot::HttpError>> + Send + 'static {<ServerImpl as MyApi>::bad_endpoint}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_trait_endpoint7.rs:22:5
   |
18 |   #[dropshot::api_description]
   |   ---------------------------- required by a bound introduced by this call
...
22 | /     #[endpoint {
23 | |         method = GET,
24 | |         path = "/test",
25 | |     }]
26 | |     async fn bad_endpoint(
   | |_________________________^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<<ServerImpl as MyApi>::Context>) -> impl Future<Output = Result<dropshot::HttpResponseOk<Ret>, dropshot::HttpError>> + Send + 'static {<ServerImpl as MyApi>::bad_endpoint}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
